Modifiche front-end
Aggiunto logo sul title
Aggiunti loghi nelle pagine con redirect in home
Bozza di footer nella home
Pulsante per nuova pagina per la creazione di schedina senza opzione salva.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,3 +54,15 @@ body {
 .full-width {
     width: 100%;
 }
+.content {
+    min-height: calc(100vh - 56px);
+}
+
+.logo-main-100 {
+    max-width: 100%;
+    margin: 0 auto;
+}
+.logo-main-80 {
+    max-width: 80%;
+    margin: 0 auto;
+}
